src/app/auth/login/login.component.css
div.login-background-image {
  background-size: cover;
  background-position: center;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

div.login-background-image.small {
  filter: blur(20px);
}

div.login-background-image.large {
  animation: sharpen 0.5s both;
}

@keyframes sharpen {
  from {
    filter: blur(20px);
  }
  to {
    filter: blur(0px);
  }
}

div.login-background-image-details {
  position: absolute;
  right: 50px;
  bottom: 50px;
  background-color: white;
  padding: 10px 20px;
  border-radius: 5px;
  opacity: 0.9;
}

div.login-background-image-details-title {
  font-weight: 700;
}

div.login-cont {
  width: 450px;
  height: 500px;
  border-radius: 5px;
  margin: auto;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 50px;
  background-color: white;
  opacity: 0.9;
  overflow: hidden;
}

@media (max-height: 650px) {
  div.login-cont {
    margin-top: 50px;
  }
}

label.login-form-label {
  font-weight: 500;
}

div.login-cont-inner {
  margin-top: 30px;
}

.login-logo-cont {
  margin: 55px 75px 25px 75px;
}

.login-logo {
  display: inline-block;
}

img.login-logo-img {
  width: 120px;
}

div.login-subtitle {
  display: inline-block;
  margin-left: 10px;
  font-family: "Roboto", sans-serif;
  font-size: 15px;
  font-weight: 600;
  color: rgb(234, 199, 0);
  top: 8px;
  position: relative;
}

div.form-group-login {
  position: relative;
  width: 300px;
  margin: 20px auto;
}

input.form-control.login-input {
  padding-left: 35px;
}

i.login-form-icon {
  position: absolute;
  left: 10px;
  top: 40px;
}

div.login-remember-me-cont {
  margin: 0 75px;
}

div.form-group-login.form-group-login-button {
  margin-top: 35px;
}

button.btn-login {
  width: 300px;
  height: 35px;
}

.login-cont-inner-message {
  width: 300px;
  margin: 30px auto;
  /* background-color: #f7efef;
  padding: 8px 10px; */
}

i.login-message-icon {
  margin-right: 15px;
  font-size: 25px;
  position: relative;
  top: 2px;
}

td.login-notice-message {
  font-family: Roboto, "Helvetica Neue", sans-serif;
  line-height: 19px;
}

svg.login-animated-svg {
  position: relative;
  top: -14px;
}

